Fixed problem of letter "g" being truncated by adding a padding. Added a bottom border in tree.

--- a/historian/frontend/src/assets/css/styles.css
+++ b/historian/frontend/src/assets/css/styles.css
@@ -289,3 +289,11 @@ mark, .mark {
   align-items: center;
   justify-content: center;
 }
+
+.bd-1 {
+  border: 1px solid;
+}
+
+.p-2 {
+ padding: 2px;
+}
